修改打包方式为war包

--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>nwsuaf.edu.cn</groupId>
-    <artifactId>lims</artifactId>
+    <artifactId>myblogs</artifactId>
     <version>1.0</version>
-    <packaging>jar</packaging>
+<!--    <packaging>jar</packaging>-->
+    <packaging>war</packaging>
 
     <properties>
         <java.version>1.8</java.version>
