首页标签功能实现

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,3 +9,5 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.devtools.restart.enabled: true
 #设置重启的目录
 spring.devtools.restart.additional-paths: src/main/java
+
+logging.level.cn.edu.nwsuaf.lims.core.Mapper=debug
