--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,13 @@
             <artifactId>commons-codec</artifactId>
             <version>1.10</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.20</version>
+            <scope>provided</scope>
+        </dependency>
         <!--        jwt验证-->
         <dependency>
             <groupId>com.auth0</groupId>
