--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,11 +1,13 @@
 # 开发环境配置
 # 数据源配置，请修改为你项目的实际配置
-spring.datasource.url=jdbc:mysql://59.110.141.166:3306/myblogs?characterEncoding=UTF-8
-spring.datasource.username=myblogs
-spring.datasource.password=myblogs
+spring.datasource.url=jdbc:mysql://59.110.141.166:3306/sqtest?characterEncoding=UTF-8
+spring.datasource.username=sqtest
+spring.datasource.password=1
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #热部署
 spring.devtools.restart.enabled: true
 #设置重启的目录
 spring.devtools.restart.additional-paths: src/main/java
+
+logging.level.cn.edu.nwsuaf.lims.dao=DEBUG
